category api : select, add , delete handler 500
